--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,12 @@
 *.zip
 *.tar.gz
 *.rar
+*.properties
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# propriedades
+src/main/resources/sql/bd_config.properties
+
